# audio-mixer

./: .eslintrc.cjs  .gitignore  README.md  README_NEW.md  UPDATE_SETUP.md  VB-AUDIO-INTEGRATION.md  VIRTUAL_DEVICES.md  audio-mixer.key  audio-mixer.key.pub  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: release.yml
public/: placeholder.txt
src/: App.tsx  bridge.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: updater.json
src-tauri/src/: main.rs
src/assets/icons/: README.md  iconMapping.ts  iconRegistry.ts  placeholder.txt
~/.tauri/: myapp.key  myapp.key.pub
